# G-n-rateur-wordpress

./: .gitignore  README.md  generator.py  pyproject.toml
templates/wordpress/: README.md.j2  archive.php.j2  cpt.php.j2  plugin.php.j2  shortcode.php.j2  single.php.j2
